tests/baselines/reference/decoratorOnVar.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnVar.ts(3,1): error TS1202: Decorators are not valid on this declaration type.


==== tests/cases/conformance/decorators/invalid/decoratorOnVar.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~~~~
    var x: number;
    ~~~~~~~~~~~~~~
!!! error TS1202: Decorators are not valid on this declaration type.